*Empty MediaWiki Message*

--- a/Blink-182.mw
+++ b/Blink-182.mw
@@ -3,12 +3,12 @@
 
 ==Biografie==
 Den oorsprounkelikkn drummer von Blink 182 noemde [[Scott Raynor]].
-In et joar van hun album dad tmééste succes a gekreegn, vloog in den tour Scott uut den band, em moest kiezn tussn stopn me Blink, of stopn me drienkn. E bitje loater estem in e afkickcentrum beland. Mo in da befoamde joar 1999 zoatn ze in de probleemn, want ze an gin drummer mêer. Under goeie moat i ton in e mum van tyd alle liedjes lêern speeln en es me under ip tour gegoan van hun album ''Enema of the state''. Die gast noemde [[Travis Barker]]. Travis, die vroegere in The Aquabats speelde, a zyn band upgegeevn en es me Blink ip tour gegoan. Achter da album wos Blink ginne punkrock mêer, mo eignlyk veranderd noar pop-punk.
+In et joar van hun album da 't mééste succes a gekreegn, vloog Raynor in den tour uut den band, em moest kiezn tussn stoppn me Blink, of stoppn me drienkn. E bitje loater est em in e afkickcentrum beland. Mo in da befoamde joar 1999 zoatn ze in de probleemn, want ze ann gin drummer mêe. [[Travis Barker]], ne goeie moat van under, e toune in 1-2-3 alle liedjes lêern speeln en es me under ip tour gegoan van hun album ''Enema of the State''. Barker, die vroegere in The Aquabats speelde, a zyn band upgegeevn en es me Blink ip tour gegoan. Achter dat album speelde Blink ginne punkrock mêer, mo eigntlik idder pop-punk.
 
-In 2005 wos Tom Delonge et e bitje beu, achter de uutgoave van under loatst gemoakte album. Ie vound da undere band Blink, nie genoeg was vo zin smoake. Uutiendelik i tie agter een concert zunne gsm nummere verandert en koestn zyn beste moatn gin contact mêer me em ipneemn. 
-Tom i ton zelf nen band ipgericht genoamd "[[Angels And Airwaves]]" oftewel AvA afgekort.
-Noa de splitsinge in ôok Mark Hoppus en Travis Barker uldern eign band ipgericht genoamd [[+44]] oftewel Plus Forty Four, genoamd no de mobielnumero daj moe droain vo 't [[Verênigd Keunienkryk]]: 0044.
-Intusschn i Angels And Aiwaves al 2 albums uutgebrocht, en Plus Forty Four êenn.
+In 2005 wos Tom Delonge et e bitje beu, achter d'uutgoave van under loatst gemoakte album. Ie vound da undere band Blink, nie genoeg was vo zyn smoake. Uutiendelik i tie achter een concert zyne gsm-nummere veranderd en kostn zyn beste moatn gin contact mêer me em ipneemn. 
+Tom e toun zelf nen band ipgericht ''[[Angels And Airwaves]]'' oftewel AvA afgekort.
+Noa de splitsinge in ôok Mark Hoppus en Travis Barker uldern eign band [[+44]] ipgericht, genoamd no de mobielnumero daj moe droain vo 't [[Verênigd Keunienkryk]]: +44.
+Intusschn i Angels And Airwaves al 2 albums uutgebrocht, en Plus Forty Four êenn.
 
 
 ==Bandleedn==
