*Empty MediaWiki Message*

--- a/Portoal:Kunst_en_Cultuur.mw
+++ b/Portoal:Kunst_en_Cultuur.mw
@@ -38,7 +38,7 @@ __NOTOC__
 * '''Muziekclubs''': [[Banana Peel]]
 * '''Muziekgenres''': 
 **[[Metal (muzik)]], [[H8000]], [[NWOBHM]]
-* '''Festivals''': [[Bergrock]], [[Cactusfestival]], [[Dranouter aan Zee]], [[Dudstock]], [[Folk Dranoeter]], [[Grensrock]], [[Kneistival]], [[Labadoux]], [[Leffingeleuren]], [[Marktrock Poperinge]], [[Nachten van de Jukte]], [[Rock op het Plein]], [[Rock Woaregem]], [[Thoprock]]
+* '''Festivals''': [[Bergrock]], [[Cactusfestival]], [[Dranouter aan Zee]], [[Dudstock]], [[Folk Dranoeter]], [[Grensrock]], [[Kneistival]], [[Labadoux]], [[Leffingeleuren]], [[Marktrock Poperinge]], [[Nachten van de Jukte]], [[Rock op het Plein]], [[Rock Woaregem]], [[Thoprock]], [[Zeeki]]
 * '''[[West-Vlamsche zangers, muzikanten en groepkes]]''': 
 ** Lichte genre: [[Benny Scott]] ([['K en Brugge in men erte]]), [[Jimmy Frey]], [[Laura Lynn]], [[Lucy Loes]], [[Marva]], [[Frank Valentino]], [[Wendy Van Wanten]], [[Will Tura]], [[Willy Lustenhouwer]] ([[Brugge is oltied schone]], [[Zie je van Brugge]])
 ** Klêenkunst/folk: [[Bart Van Den Bossche]], [[Klakkebusse (folkgroep)]] ([[Iep Fourier]]), [[Olla Vogala]], [[Willem Vermandere]] ([[Vladslo (lied)]]), [[Yevgueni]]
