--- a/Rôonberg.mw
+++ b/Rôonberg.mw
@@ -4,6 +4,7 @@ De '''Rôonberg''', (Nederlands: ''Rodeberg'') is e [[getuugneuvel]] in [[Westou
 * De Rôonberg is een ideaal pleksje voe mountainbikers e wandeloars. Op de nôordkant ejje 't Ellegat (Nederlands: Hellegat), e sôorte va bebusjte ravyne. Doa ountspringt d'Ellegatbeke. 
 * Wulfhille, e heemkundig museum da werktuug verzoamelt van oude ambachtn.
 * Vroeger wos 't er op de Rôonberg e zwembad: de Kosmos. Da wos bekend in hêel 't streke, moa de Kosmos is nu ol e poar joar toe en an 't verloedern. Recentelik (juli 2006) klappn ze van e restauroasje van 't complex.
+* De koers passierder ieder joar. De vierdoahsje van Dunkerke onder andere en noh e poare.
 
 [[Categorie:Geografie van België]]
 [[Categorie:Euvelland]]
