--- a/Lendlee.mw
+++ b/Lendlee.mw
@@ -55,6 +55,7 @@ Ie es ton neregestort in [[Iengelmunster]].
 *De kerke van Lendlee
 *sportalle
 *Den Tap
+*[http://wikimapia.org/#lat=50.87745&lon=3.241696&z=15&l=0&m=a&v=2 't Stort]
 
 ==Geboorn in Lendlee==
 * [[Lodewijk Baekelandt]], beruchte bendeleider en strukroovre.
