*Empty MediaWiki Message*

--- a/De_Lustige_Velodroom.mw
+++ b/De_Lustige_Velodroom.mw
@@ -1,3 +1,5 @@
+[[Ofbeeldienge: Velodrome 1.jpg|thumb|<center>De Velodrome nie verre van de Piere]]
+[[Ofbeeldienge: Velodrome 2.jpg|thumb|<center>Kluchtige velo's ip de Velodrome]]
 '''De Lustige Velodroom''' of de '''Velodrome''' in [[Blanknberge]], is êen van de gekendste toeristische attracties, die ieder seizoen duzendn bezoekers antrekt, moa nog vele mêer duzendn kykers.  ’t Is ’n outn  veloboane die ip den dyk stoat  nie verre van de [[Piere]]. Je kunt er roundjes ryen ip kluchtige velo’s. ’t Bestoat al sedert [[1933]].
 
 ’t Is open vanof de [[poasvakantie]] toet en met ‘t derde weekend van september. De piste wordt in september volledig ofgebrookn en in moarte were ipgebouwd.
