--- a/Mark_Hoppus.mw
+++ b/Mark_Hoppus.mw
@@ -1,3 +1,20 @@
-{{wiu}}'''Mark Hoppus''' was nen ex lid von de voormalign band [[blink 182]]
-en speelt de basgitarre. 
-Nuj istem lit van [[+44]]
+== '''Pre Blink''' ==
+
+
+Mark is geborn in Californië ip vuftién Maart 1972.
+Wanneer datem 15 werd, kreegtieêm zun éeste basgitare noadatem geholpn eêt me t'us te schildern.
+Derna eeft Mark in twié bands gespeeld. Toen datie no San Diego verusde vo zun studie, ontmoete ie doar [[Tom Delonge]], da toen tvrindje wos von zun zuster Anna Hoppus. Ze leerden elkoar kénnen in tjoar 1992.
+
+
+== '''Den blink tied''' ==
+
+Toen do den drummer [[Scott Raynor]] en Mark gin wieven kondn kriegen, en ze ton mo ut vervelinge beslotn om nen band ip te richtn. Wont zegn ze, vrouwn oedn van muziekântn. No e poar demotjes en ze ton beslotn om de band "blink" te dopn. Mark werkte ton nog toe in 1996 in ne muziekwinkle, en derno istij gestopt, en etie full-time gon tourn mé zunne band. Ton enze de noame moetn verandern wont en Ierse technoband noemden al "blink", en dreigde me ne rechtzoake. Ton enze de noame veranderd no [[Blink 182]].In 1999 gaftij den drummer Scott een ultimatum: stopn mé drumn of stopn mé zupn. Uteindliek ebn zem derut gezwierd en werd [[Travis Barker]] full-time drummer.
+
+'''
+== Noa Blink tied ==
+'''
+Noa Blink is Mark zunnen eigen band begonnen genoamd +44.
+Ut eeft to nuj toê al in albume utgebroacht nomeliek
+''"When your heart stops beating"''
+
+----
