--- a/De_Lustige_Velodroom.mw
+++ b/De_Lustige_Velodroom.mw
@@ -1,24 +1,24 @@
 [[Ofbeeldienge: Velodrome 1.jpg|thumb|<center>De Velodrome nie verre van de Piere]]
 [[Ofbeeldienge: Velodrome 2.jpg|thumb|<center>Kluchtige velo's ip de Velodrome]]
 [[Ofbeeldienge: Velodrome 3.jpg|thumb|<center>De Velodrome]]
-'''De Lustige Velodroom''' of de '''Velodrome''' in [[Blanknberge]], is êen van de gekendste toeristische attracties, die ieder seizoen duzendn bezoekers antrekt, moa nog vele mêer duzendn kykers.  ’t Is ’n outn  veloboane die ip den dyk stoat  nie verre van de [[Piere]]. Je kunt er roundjes ryen ip kluchtige velo’s. ’t Bestoat al sedert [[1933]].
+'''De Lustige Velodroom''' of de '''Velodrome''' in [[Blanknberge]], is êen van de gekendste touristische attracties, die ieder seizoen duzendn bezoekers antrekt, moa nog vele mêer duzendn kykers. ’t Is ’n outn  veloboane die ip den dyk stoat nie verre van de [[Piere]]. Je kunt er roundjes ryen ip kluchtige velo’s. ’t Bestoat al sedert [[1933]].
 
-’t Is open vanof de [[poasvakantie]] toet en met ‘t derde weekend van september. De piste wordt in september volledig ofgebrookn en in moarte were ipgebouwd.
+’t Is open vanof de [[poasvakantie]] tout en met ‘t derde weekend van september. De piste wordt in september hêlegans ofgebrookn en in moarte were ipgebouwd.
 ==Eeste generoatie==
-In 1933 wilde Alfons Monbaliu velo’s vereuren ip de [[zêedyk]]. Dat mocht nie en Alfons kwam ip ‘t lumineus gedacht van e velodrome te bouwen ip ‘t [[strange]], an den ôostkant van de piere.
-Gin kluchtige  velo’s  moar  ‘n 30-tal geweune kindervelo’s. Alfons makte wel een oude velo met grôte wielen, die ip de piste stound als versierienge. Omdat de bezoekers alsan moa vroegen van met die velo te meugn ryen, bouwde Alfons ’n poar  “kluchtige  velo’s” en azo is de Velodrome geboren.
+In 1933 wilde Alfons Monbaliu velo’s vereuren ip de [[zêedyk]]. Da mocht nie en Alfons kwam ip ‘t lumineus gedacht van e velodrome te bouwen ip ‘t [[strange]], an den ôostkant van de piere.
+Gin kluchtige  velo’s  moar  ‘n 30-tal geweune kindervelo’s. Alfons makte wel een oude velo met grôte wielen, die ip de piste stound vo versierienge. Omdat de bezoekers alsan moa vroegen van met die velo te meugn ryen, bouwde Alfons ’n poar  “kluchtige  velo’s” en azo is de Velodrome geboren.
 Achter den [[Twiddn Weireldoorloge|oorloge]] veruusde de piste noa de plekke van nu, an de westkant van de piere.
 ==Twidde generoatie==
-In [[1957]] pakte Louis Monbaliu de piste van zyn voader over. Louis was ip da moment een bekende velo-[[acroboat]]. Binst den oorloge trad ‘n al ip en ook d’rnoa toogdet ie overal z’n kunstn met de velo. Je balanceerdege azo ip de top van de piere met een [[êenwieler]] binst dat er vele toeschouwers stoundn te kykn.
-In dien tyd brakt’n ook ‘t [[weireldrecord]] afstand me z’n êenwieler.
+In [[1957]] pakte Louis Monbaliu de piste van zyn voader over. Louis was ip da moment een bekende velo-[[acroboat]]. Binst den oorloge trad ‘n al ip en ook d’r achter toogdet ie overal z’n kunstn met de velo. Je balanceerdege azo ip den top van de piere met een [[êenwieler]] binst dat er vele toeschouwers stoundn te kykn.
+In dien tyd brakt ’n ook ‘t [[weireldrecord]] afstand me z’n êenwieler.
  
-Louis breidege ook de veloverzoamelienge uut me de [[ovoale]] wielen, de rik-an-rik-[[tandem]], ‘t wipzoadel, de swingbike, Maradonna, de achteruuttrapper en de specialiteit van ‘t uus de plôoivelo.
+Louis breidege ook de veloverzoamelienge uut met de [[ovoale]] wielen, de rik-an-rik-[[tandem]], de wipzoate, de swingbike, Maradonna, de achteruuttrapper en de specialiteit van ‘t uus de plôoivelo.
  
-In de joaren ‘70 en ‘80 wierd de velodrome bekend deur de doagelikse veloshows. De twi zeuns en dochter van Louis voerdn ‘n doageliks showspel ip, met de grotste velo (wieldeursnee 1,4m.) en ‘t allerklêenste velootje (wieldiameter 5 cm.).
+In de joaren ‘70 en ‘80 gerakte de velodrome gekend deur under doagelikse veloshows. De twi zeuns en dochter van Louis voerdn ‘n doageliks showspel ip, met de grotste velo (wieldeursnee 1,4m.) en ‘t allerklêenste velootje (wieldiameter 5 cm.).
 ==Derde generoatie==
-Thierry, die al me voader Louis meewerkte ost’n  klêne was, pakte in [[1990]] tegoare me z’n vrouwe Nancy Hinderyckx (dochter van oud [[Club Brugge]] speler ’Bibi’) de velodrome over. En volgens de familietraditie et’n de collectie kluchtige velo’s nog uutgebreid met ounder andere de lambadavelo.
+Thierry, die al me voader Louis meewerkte ost ’n klêne was, pakte in [[1990]] tegoare me z’n vrouwe Nancy Hinderyckx (dochter van oud [[Club Brugge]] speler ’Bibi’) de velodrome over. En volgens de familietraditie et ’n de collectie kluchtige velo’s nog uutgebreid met ounder andere de lambadavelo.
 ==Vierde generoatie?==
-Thierry en Nancy ein e zeune en e dochter. Of dan zynder  de traditie goan vôortzettn, goat den tyd uutwyzn.
+Thierry en Nancy en e zeune en e dochter. Of dan zynder de traditie goan vôortzettn, goat den tyd uutwyzn.
 ==Ip verplatsienge==
 *Ieder joar stoan ze met een klêne geïmproviseerde ’Lustige Velodroom’ ip de kerstmarkt van [[Brussel]].
 *In december 2006 stoundn ze vo den êeste ki met de volledige piste ip verplatsienge met de “Velofollies” Kortryk XPO, ’n velo-evenement in de [[Kortryk]]se hallen. 
