--- a/Ieffeltôorn.mw
+++ b/Ieffeltôorn.mw
@@ -24,7 +24,7 @@ Sedert 2000, voe 't nieuw millennium, e ze de tôorn versierd me flikkerluchtjes
 
 [[Categorie:Gebouw]]
 [[Categorie:Parys]]
-
+{{Link FA|vi}}{{Link FA|fr}}
 [[af:Eiffel-toring]]
 [[als:Eiffelturm]]
 [[ar:برج إيفل]]
