--- a/Zêebus.mw
+++ b/Zêebus.mw
@@ -1,6 +1,6 @@
-’t '''Zêebus'''  is een recent provinciedomein da ligt tusschn [[Blanknberge]] en [[Zêebrugge]] in de [[polders]] juste achter de kustlyne. Den anleg van ’t bus was een gemeenschappelik initiatief van de provincie [[West-Vloandern]] en de stad Blanknberge. 
-Omda den [[oavn van Zêebrugge]] doa kort teegn ligt, eit 't een belangryke ofschermiengsfunctie en zou 't ook kunn zorgn dat er minder volk in de [[dune|duunn]] lopt.
-Nevenst 't bus zelve zyn der enigte veldn ingericht vo [[weideveugel]]s. De lêge dêeln zyn uutgegroavn, zodat der mêer woater in kan stoan en dat er nen goein biotoop vo die veugels kan ountstoan. Je kunt die veldn zien vanip de [[kustveloroute]].
+’t '''Zêebus'''  is een recent provinciedomein da ligt tusschn [[Blanknberge]] en [[Zêebrugge]] in de [[polders]] juste achter de kustlyne. Den anleg van ’t bus was een gemêenschappelik initiatief van de provincie [[West-Vloandern]] en de stad Blanknberge. 
+Omdat d'[[oave van Zêebrugge]] doa kort teegn ligt, et 't een belangryke ofschermiengsfunctie en 't zoudt er ook kunn vôren zorgn dat er minder volk in de [[dune|duunn]] lopt.
+Neffest 't bus zelve zyn der ênigte veldn ingericht vo [[weideveugel]]s. De lêge dêeln zyn uutgegroavn, zodat der mêer woater in kan stoan en dat er nen goein biotoop vo die veugels kan ountstoan. Je kunt die veldn zien vanip de [[kustveloroute]].
 
 ==Recreoatie==
 *Wandeln en nateurobservoatie
