--- a/Jan_van_Eyck.mw
+++ b/Jan_van_Eyck.mw
@@ -1,17 +1,22 @@
 [[Ofbeeldienge:Eyck selbst.jpg|thumb|<center>''Man met rode tulband'', 1433. Volgens sommigste e zelfportret van Jan van Eyck.]]
-'''Jan van Eyck''' ([[Maaseik]]?, ca. [[1390]] –[[Brugge]], [[9 juli]] [[1441]]) was ‘n [[kunstschilder]] uut d'n eestn elft van de 15e eeuwe en één van de belangrykste [[Vlamsche Primitievn]]. 
+'''Jan van Eyck''' ([[Maaseik]]?, ca. [[1390]] –[[Brugge]], [[9 juli]] [[1441]]) was e [[kunstschilder]] uut d'n êestn elft van de 15e eeuwe en êen van de belangrykste [[Vlamsche Primitievn]]. 
 
 ==Zyn leevn==
-Je was eest hofschilder van de groaf van Olland moa noa diens dood in 1425 vertrokt 'n noa Brugge woa dat 'n hofschilder en koamereere wierd van [[Filips den Goein]] de machtign [[Bourgondische ertoogn|ertog van Bourgondië]], die zot was van kunst. Direct achter z’n anstellinge in 1425 vertrokt 'n noa [[Rysel]] woa dat d'n ertog ton ’t liefste verbleef. Moar in 1430 vestigdet y em definitief in Brugge. Ol de schilderyen die zeker van em zyn, dateern uut de Brugse periode. 
-Jan van Eyck is de reste van z’n leevn in dienst van [[Filips den Goein]] gebleevn. Je stierf in Brugge in 1441 en is begroavn in de Sint-Donaaskerke (ofgebrookn in 1799).
+Je was êest hofschilder van de groaf van Olland moa noa diens dôod in 1425 vertrokt 'n noa Brugge woa dat 'n hofschilder en koamereere wierd van [[Filips den Goein]] de machtign [[Bourgondische ertoogn|ertog van Bourgondië]], die zot was van kunst. Direct achter z’n anstellinge in 1425 vertrokt 'n noa [[Rysel]] woa dat d'n ertog ton ’t liefste verblêef. Moar in 1430 vestigdet ie em definitief in Brugge. Ol de schilderyen die zeker van em zyn, dateern uut de Brugsche periode. 
+Jan van Eyck is de reste van z’n leevn in dienst van [[Filips den Goein]] gebleevn. Je stierf in Brugge in 1441 en is begroavn in de [[Sint-Donaaskathedroale|Sint-Donaaskerke]].
 
 ==Zyn werk==
-Je makte surtout portrettn en religieuze thema’s. 't Portret: "Man met rode tulband" is 't eeste portret in de kunstgeschiedenisse da rechte in j'n oogn kykt. Doarom zoudt 't 'n zelfportret kunn zyn da vo de spegel gemakt is. Je signeerde en dateerde z’n werkn en da was ton nog nie gebrukelik. Soms zettet y d’r ook z’n lyfspreuke by ''als ich can''. Da bewyst oe zelfbewust dat 'n was. ’t Eeste schilderye da van em bewoard is gebleevn en ook ’t grotste is ’t in 1432 voltooide retabel of altoarstik van ’t Lam Gods (Sint-Baafskathedroale in [[Gent]] ). 't Patriciërskoppel Jodocus Vydt en Elisabeth Borluut goavn Van Eyck d'n updracht voa 't altoarstik van de zykapelle van de kathedroale te beschilderen. Volgens 't upschrift zou Jans broere Hubrecht ook meegewerkt èn an 't werk moa dat is nie dudelik omdat er gin andere schilderyen van èm bekend zyn.
+Je makte surtout portrettn en religieuze thema’s. 't Portret: "Man met rode tulband" is 't êeste portret in de kunstgeschiedenisse da rechte in d'oogn kykt. Doarom zoudt 't e zelfportret kunn zyn da vo de spegel gemakt is. 
+
+Je signeerde en dateerde z’n werkn en da was ton nog nie gebrukelik. Soms zettet ie d’r ook z’n lyfspreuke by ''als ich can''. Da bewyst oe zelfbewust dat 'n was. 
+
+’t Eeste schilderye da van em bewoard is gebleevn en ook ’t grotste is ’t in 1432 voltôoid retabel of altoarstik van ’t Lam Gods (Sint-Baafskathedroale in [[Gent]] ). 't Patriciërskoppel Jodocus Vydt en Elisabeth Borluut goavn Van Eyck d'n ipdracht voa 't altoarstik van de zykapelle van de kathedroale te beschilderen. Volgens 't ipschrift zou Jans broere Hubrecht ôok meegewerkt èn an 't werk.
+
 ’t Twidde grotste schilderye is de [[Madonna mè kanunnik Joris van der Paele]], van 1436 ([[Groeningemuseum]] in Brugge).
 
-Je was styf g’interesseerd in de mens en de nateure en z’n religieuze symboliek wyst ip z’n uutgebreide kennisse, tegoare mè smoak en ’n kritische zin.  
+Jan van Eyck was styf g’interesseerd in de mens en de nateure en z’n religieuze symboliek wyst ip z’n uutgebreide kennisse, z'n smoak en ’n kritische zin.  
 
-Jan van Eyck èt olle grote Vlamsche schilders van de 15e en de 16e eeuwe beïnvloed en je was de belangrykste schoakel in de ountwikkelinge van de Europeesche schilderkunst.
+J'èt ol de grôte Vlamsche schilders van de 15e en de 16e eeuwe beïnvloed en je was de belangrykste schoakel in de ountwikkelinge van d'Europeesche schilderkunst.
 
 {{commons|Jan van Eyck}}
 
