*Empty MediaWiki Message*

--- a/Madonna_mè_kanunnik_Joris_van_der_Paele.mw
+++ b/Madonna_mè_kanunnik_Joris_van_der_Paele.mw
@@ -1,16 +1,16 @@
-[[Ofbeeldienge:Jan van Eyck 069.jpg|thumb| Madonna mè kanunnik Joris van der Paele. 1436. Jan van Eyck]]
-De '''Madonna mè kanunnik Joris van der Paele''' is 'n schilderye van [[Jan van Eyck]] uut de schole van de [[Vlamsche Primitievn]]. 't Werk angt in ‘t [[Groeningemuseum]] in [[Brugge]]. 
+[[Ofbeeldienge:Jan van Eyck 069.jpg|thumb| Madonna mè kanunnik Joris van der Paele (Jan van Eyck)]]
+De '''Madonna mè kanunnik Joris van der Paele''' is e schilderye van [[Jan van Eyck]] uut de schole van de [[Vlamsche Primitievn]]. 't Werk angt in ‘t [[Groeningemuseum]] in [[Brugge]]. 
 
-Joris van der Paele, kanunnik van de Sint-Donaaskerke in Brugge, liet ’t werk moakn. J'aad an 't bestier van de kerke 'n flinke somme geld geschounkn vo joar in joar uut messn vor èm te loatn ipdroagn. 't Werk zoudt dichte by of boovn 't altoar g'angn èn. Ot 'n oungeveer vuufenviftig joar oud was, round 1425, èt 'n em als ryke kanunnik ip ruste gevestigd in Brugge (verzekers zyn geboortestad). 
+Joris van der Paele, kanunnik van de [[Sint-Donaaskathedroale|Sint-Donaaskerke]] van Brugge, liet ’t werk moakn. J'aad an 't bestier van de kerke e grôte somme geld geschounkn vo messn vor em te loatn ipdroagn. 't Werk zoudt dichte by of boovn 't altoar g'angn èn. Ot 'n à peu près vuufenviftig joar oud was, round 1425, èt 'n em als ryke kanunnik ip ruste gevestigd in Brugge (verzekers zyn geboortestad). 
 
 Je stierf in 1443.
 
 ==’t Werk== 
-In ’n wit kooremde en mè z’n gebeednboek in z’n and is ’t lik of dat de kanunnik 'n liturgische vieringe byweunt, mor ip de platse van ’t altoar zit [[Maria]] met eur kind. Links en reks stoan d’r twêe illign: bisschop Donatianus, de patroon van de kerke vo wien dat ‘t paneel bestemd was, en Joris, de beschermillign van de kanunnik. Donatianus droagt ’n processiekruus en 'n woagnwiel mè brandnde keirsn, attribuutn die no z’n leevn verwyzn. Joris stelt de kanunnik an [[Jezus]] en Maria voorn binst dat ’n z’n elm ofdoet. Jezus oudt ‘n Indische peruche vaste. Die veugel kost zogezeid ‘Ave’ zeggn. D’r zit nog vele meer symboliek in ’t schilderye. Donaas droagt ‘n blauwe koorkappe, Maria ’n rooë mantel, de kanunnik ’n wit kooremde en Joris 'n goudn arnas, de heraldische kleurn van Brugge. De gewoadn zyn magnifiek gemakt. De woapnuutrustinge blinkt en weerkatst zelfs olles van buutn ’t schilderye en in ’t schild da Joris ip z’n rugge droagt zie je dudelik de weerkatsinge van ’n groeptje menschn, mè van voorn verzekers Van Eyck zelve. 
+In e wit kooremde en mè z’n gebeednboek in z’n and is ’t lik of dat de kanunnik e liturgische vieringe byweunt, mor ip de platse van ’t altoar zit [[Maria]] met eur kind. Links en reks stoan d’r twêe illign: bisschop Donatianus, de patrôon van de kerke vo wien dat ‘t paneel bestemd was, en Joris, de beschermillign van de kanunnik. Donatianus droagt e processiekruus en e woagnwiel mè brandnde keirsn, attribuutn die noa z’n leevn verwyzn. Joris stelt de kanunnik an [[Jezus]] en Maria vôorn binst dat ’n z’n elm ofdoet. Jezus oudt ‘n Indische peruche vaste. Die veugel kost volgns under ‘Ave’ zeggn. D’r zit nog vele mêer symboliek in ’t schilderye. Donaas droagt ‘n blauwe kôorkappe, Maria ’n rooie mantel, de kanunnik ’n wit kôoremde en Joris 'n goudn arnas, de heraldische kleurn van Brugge. De gewoadn zyn magnifiek gemakt. De woapnuutrustinge blinkt en weerkatst zelfs olles van buutn ’t schilderye en in ’t schild da Joris ip z’n rik droagt ku je dudelik de weerkatsinge zien van e groeptje menschn, mè van vôorn verzekers Van Eyck zelve. 
 
-De kanunnik stoat er  oungelooflik realistisch ip. Je ziet er nie vree gezound uut. Dokteurs kunn ip basis van 't portet de diagnose stelln van de kwoaln van de zesenzestigjoarign pauselikke diplomoat. Jan van Eyck schilderdeg’ em meesterlik met 'n gezwolln slagoader ip zn sloap, oarverlies by zyn ore, 'n gezwolln oorlelle en gezwolln andn. De diagnose is  temporale artritis. De maniere woarip da Van Eyck de symptoomn ipgemerkt en weregegeevn èt grenst an de perfectie. 
+De zesenzestigjoarign kanunnik stoat er vrêe realistisch ip. Je ziet er nie styf gezound uut. Dokteurs kunn ip basis van 't portet de diagnose stelln van z'n kwoaln. Jan van Eyck schilderdeg’ em met e gezwolln slagoader ip z'n sloap, oarverlies by z'n ôre, 'n ipgezwolln oorlelle en gezwolln andn. De diagnose is ''temporale artritis''. De maniere woarip da Van Eyck de symptoomn ipgemerkt en weregegeevn èt grenst an de perfectie. 
 
-Volgns 'n Latynse inscriptie vanounder an de lyste wierd ’t werk voltooid in 1436.
+Volgns e Latynse inscriptie vanounder an de lyste wierd ’t werk voltooid in 1436.
 
 [[Categorie:Jan van Eyck]]
 
