--- a/Klarinette.mw
+++ b/Klarinette.mw
@@ -6,3 +6,54 @@ Klarinettn kun ounder andere gemakt zyn ut out, plastic, artn kalletchou of ivô
 
 ==Sôortn==
 Der zyn redelyk vele sôortn klarinettn, mo de mêest voorkomende van ôge no lêge zyn: de Es-klarinette, de A-klarinette, de Bes-klarinette, de altklarinette, de basklarinette en de contrabasklarinette.
+
+[[Categorie: Muziekinstrument]]
+
+[[ar:كلارينيت]]
+[[bar:Glarinettn]]
+[[bg:Кларинет]]
+[[bn:ক্লারিনেট]]
+[[ca:Clarinet]]
+[[cs:Klarinet]]
+[[da:Klarinet]]
+[[de:Klarinette]]
+[[el:Κλαρινέτο]]
+[[en:Clarinet]]
+[[eo:Klarneto]]
+[[es:Clarinete]]
+[[et:Klarnet]]
+[[fa:کلارینت]]
+[[fi:Klarinetti]]
+[[fr:Clarinette]]
+[[gd:Clàirneid]]
+[[gl:Clarinete]]
+[[he:קלרנית]]
+[[hr:Klarinet]]
+[[hu:Klarinét]]
+[[id:Klarinet]]
+[[is:Klarínett]]
+[[it:Clarinetto]]
+[[ja:クラリネット]]
+[[ko:클라리넷]]
+[[lt:Klarnetas]]
+[[lv:Klarnete]]
+[[nl:Klarinet]]
+[[nn:Klarinett]]
+[[no:Klarinett]]
+[[pl:Klarnet]]
+[[pt:Clarinete]]
+[[qu:Qipa pinkuyllu]]
+[[ru:Кларнет]]
+[[scn:Clarinu]]
+[[sh:Klarinet]]
+[[simple:Clarinet]]
+[[sl:Klarinet]]
+[[sr:Кларинет]]
+[[sv:Klarinett]]
+[[ta:கிளாரினெட்]]
+[[th:คลาริเน็ต]]
+[[tr:Klarnet]]
+[[uk:Кларнет]]
+[[vi:Kèn dăm đơn]]
+[[zh:單簧管]]
+[[zh-min-nan:O͘-ta̍t-á]]
