*Empty MediaWiki Message*

--- a/Burg_(Brugge).mw
+++ b/Burg_(Brugge).mw
@@ -1,4 +1,4 @@
-[[Image:Brugge - Waterhalle 1294 - 1787.jpg|thumb|right|300px|De Burg an de riviere de Reie mè links de Sint-Donaaskathedroale]] 
+[[Image:Brugge - Waterhalle 1294 - 1787.jpg|thumb|right|300px|De Burg an de riviere de Reie mè links de [[Sint-Donaaskathedroale]]]] 
 De '''Burg''' is ‘t pling woa dat de geschiedenisse van Brugge begost is. De riviere de Reie strôomde deur Brugge en is nu hêlegans gekanaliseerd.
 ==Geschiedenisse==
 [[843]] was ’n importent joar vor Europa. Deur ‘t [[Verdrag van Verdun]] wierd ’t Ryk van [[Karel den Grôotn]] verdêeld ounder z’n drie klêenkinders. [[Karel den Kletsn]] krêeg  [[West-Francië]] (à peu près [[Frankryk]] en [[Vloandern]]).
@@ -12,7 +12,7 @@ Ze kostn met under bootn langs de zeeoarm ’t [[Zwin]] en de riviere de Reie, (
 
 Brugge groeide round de burcht van de groavn van Vloandern. ’t Was in dien tyd groafelik gebied (nie stedelik) en dus under privébezit.
 
-Round 944 liet groaf van Vloandern Arnulf I de [[Sint-Donaaskathedroale (Brugge)|Sint-Donaaskerke]] bouwn noa ’t model van de Paltskapelle van [[Karel den Grôotn]] in [[Aakn]]. De kerke et ‘n importente rolle gespeeld in Brugge, moar is in 1800 ofgebrookn deur de Fransche en nie mêer erbouwd. 
+Round 944 liet groaf van Vloandern Arnulf I de [[Sint-Donaaskathedroale|Sint-Donaaskerke]] bouwn noa ’t model van de Paltskapelle van [[Karel den Grôotn]] in [[Aakn]]. De kerke et ‘n importente rolle gespeeld in Brugge, moar is in 1800 ofgebrookn deur de Fransche en nie mêer erbouwd. 
 
 ’t Enigste dat er nog an erinnert zyn de groundvestn, ountdekt deur archeologische ipgroaviengn in 1955 en binst de groafwerkn vô den bouw van ‘t nieuw hotel  in 1988. Z’èn ôok ’n deel van ‘t kôor van de kathedroale blôot geleid. De restantn van de kathedroale zyn g’integreerd in de kelderverdiepienge van ’t Crowne Plaza Burghotel en kunn groatis bezocht wordn. 
 
