--- a/Lodewyk_van_Male.mw
+++ b/Lodewyk_van_Male.mw
@@ -26,7 +26,7 @@ Ot in 1379 de Gentschn ipstand uutbrak, zyn Lodewyks Brugsche anangers versleegn
 Vo Gent te dwingn under over te geevn a Lodewyk de belangrykste weegn noa ‘t stad ofgeslootn. Filips van Artevelde, de leider van de Gentsche rebelln, wilde nog  ounderandeln in [[Doornik]] moa zounder resultoat en ’t enigste dat er ip zaat was van Brugge te bestormn vo were een uutweg noa de zêe te kunn èn.
 
 De Slag zoudt den dag achter d'[[Illig-Bloedprocessie]] begost zyn en de Bruggeliengen zoun onnozel zat gewist zyn. Ze kwoamn rechte van d’erbergn round de ''Meersn'' en z’aan ounder de boane voort gedrounkn vo couroage ip te doen. Achter e kort gevecht kost Artevelde ’t Brugs leger, da nie in stoat was vor under  serieus te verweirn,  versloan en Filips bezette Brugge denzelfstn dag zounder moeite. Lodewyk kost vluchtn noa [[Rysel]].
-Volgens e [[legende]] zoun de Gentenoars dien dag de droake van de Brugsche [[Sint-Donaaskerke]] (die nie mi bestoat) g’oald èn vor ip ’t belfort van Gent te zettn.
+Volgens e [[legende]] zoun de Gentenoars dien dag de droake van de Brugsche [[Sint-Donaaskathedroale|Sint-Donaaskerke]] (die nie mê bestoat) g’oald èn vor ip ’t belfort van Gent te zettn.
 
 E poar moandn loater is  Filips van Artevelde gesneuveld in de [[Slag by Westrôzebeke]] (27 nov. 1382). Lodewyk kreeg ulpe van ze schôonzeune [[Filips den Stoutn]].
 
