--- a/Blink-182.mw
+++ b/Blink-182.mw
@@ -1,5 +1,5 @@
 [[Ofbeeldienge:Blink182.jpg|thumb|right|Blink182 me Tom DeLonge, Mark Hoppus en Travis Barker (van links nor reks)]]
-'''Blink 182''' (oorsprounkelik Blink genoamd) es ne punk-rock band uut [[San Diego]], upgericht deur [[Mark Hoppus]] en [[Tom Delonge]] in [[1991]].
+'''Blink-182''' (oorsprounkelik Blink genoamd) es ne punk-rock band uut [[San Diego]], upgericht deur [[Mark Hoppus]] en [[Tom Delonge]] in [[1991]].
 
 ==Biografie==
 Den oorsprounkelikkn drummer von Blink 182 noemde [[Scott Raynor]].
@@ -28,4 +28,43 @@ Intusschn i Angels And Airwaves al 2 albums uutgebrocht, en Plus Forty Four êen
 * Blink-182 (gin titel, album, 2003)
 * Greatest Hits (verzoamelalbum, 2005)
 
-[[Categorie:Muziek]]
+[[Categorie:Groep uut de Verênigde Stoatn]]
+[[Categorie:Punk]]
+
+[[an:Blink-182]]
+[[ar:بلينك-182]]
+[[bg:Блинк-182]]
+[[ca:Blink-182]]
+[[cs:Blink-182]]
+[[csb:Blink-182]]
+[[da:Blink-182]]
+[[de:Blink-182]]
+[[en:Blink-182]]
+[[es:Blink-182]]
+[[et:Blink-182]]
+[[eu:Blink 182]]
+[[fi:Blink-182]]
+[[fr:Blink-182]]
+[[he:בלינק 182]]
+[[hr:Blink-182]]
+[[hu:Blink-182]]
+[[it:Blink-182]]
+[[ja:ブリンク 182]]
+[[ko:블링크-182]]
+[[lt:Blink-182]]
+[[nl:Blink-182]]
+[[nn:Blink-182]]
+[[no:Blink-182]]
+[[pl:Blink-182]]
+[[pt:Blink-182]]
+[[ru:Blink-182]]
+[[sh:Blink-182]]
+[[simple:Blink-182]]
+[[sk:Blink-182]]
+[[sl:Blink-182]]
+[[sr:Блинк 182]]
+[[sv:Blink-182]]
+[[th:บลิงก์-182]]
+[[tr:Blink 182]]
+[[uz:Blink-182]]
+[[zh:眨眼182]]
