--- a/Mark_Hoppus.mw
+++ b/Mark_Hoppus.mw
@@ -1,22 +1,14 @@
-== '''Pre Blink''' ==
+'''Mark Hoppus''' is nen basgitarist, geborn in Californië ip vuftién moartt 1972.
+Wanneer datem 15 werd, kreegtie'êm zun éeste basgitare noadat'em ge'olpn êet me t'uus te schildern.
+Derna eeft Mark in twêe bands gespeeld. Toen dat'ie no San Diego veruusde vo zun studie, ontmoete ie doar [[Tom Delonge]], da toen 't vrindje wos von zun zuster Anna Hoppus. Ze leerden elkoar kenn in 't joar 1992.
 
+== '''Den blink tyd''' ==
+Toen do den drummer [[Scott Raynor]] en Mark gin wuven kondn krygn, en ze ton mo uut vervelinge beslootn om nen band ip te richtn. Wont zeggn ze, vrouwn oudn van muziekantn. No e poar demotjes en ze ton beslootn om de band "blink" te dopn. Mark werkte ton nog tout in 1996 in ne muziekwinkle, en derno ist'ie gestopt, en et'ie full-time gon tourn mè zyne band. Ton enze de noame moetn verandern wont en Ierse technoband noemden al "blink", en dreigde me ne rechtzoake. Ton en ze de noame veranderd no [[Blink 182]]. In 1999 gaft'ie den drummer Scott een ultimatum: stoppn mé drummn of stopn mè zuupn. Uuteindlik ebn zem deruut gezwierd en werd [[Travis Barker]] full-time drummer.
 
-Mark is geborn in Californië ip vuftién Maart 1972.
-Wanneer datem 15 werd, kreegtieêm zun éeste basgitare noadatem geholpn eêt me t'us te schildern.
-Derna eeft Mark in twié bands gespeeld. Toen datie no San Diego verusde vo zun studie, ontmoete ie doar [[Tom Delonge]], da toen tvrindje wos von zun zuster Anna Hoppus. Ze leerden elkoar kénnen in tjoar 1992.
+== ''' Achter den Blink tyd''' ==
+Achter Blink is Mark zynn eigen band begonnen genoamd +44.
+Et eeft to nu toe al en albume utgebroacht noamelik
+''"When your heart stops beating"''.
 
-
-== '''Den blink tied''' ==
-
-Toen do den drummer [[Scott Raynor]] en Mark gin wieven kondn kriegen, en ze ton mo ut vervelinge beslotn om nen band ip te richtn. Wont zegn ze, vrouwn oedn van muziekântn. No e poar demotjes en ze ton beslotn om de band "blink" te dopn. Mark werkte ton nog toe in 1996 in ne muziekwinkle, en derno istij gestopt, en etie full-time gon tourn mé zunne band. Ton enze de noame moetn verandern wont en Ierse technoband noemden al "blink", en dreigde me ne rechtzoake. Ton enze de noame veranderd no [[Blink 182]].In 1999 gaftij den drummer Scott een ultimatum: stopn mé drumn of stopn mé zupn. Uteindliek ebn zem derut gezwierd en werd [[Travis Barker]] full-time drummer.
-
-
-
-== ''' Noa Blink tied''' ==
-
-
-Noa Blink is Mark zunnen eigen band begonnen genoamd +44.
-Ut eeft to nuj toê al in albume utgebroacht nomeliek
-''"When your heart stops beating"''
-
-----
+[[Categorie:Amerikoansn muzikant]]
+[[Categorie:Blink 182]]
