*Empty MediaWiki Message*

--- a/Vierdoagsche_van_Duunkerke.mw
+++ b/Vierdoagsche_van_Duunkerke.mw
@@ -3,19 +3,19 @@ De '''Vierdoagsche van Duunkerke''' is e [[koers]] die, sedert 1955, idder joar 
 De koers is mêestol verreedn tusschen begun mei. De Vierdoagsche deurt, de latste joarn, eigentlik 5 doagn. D'r zyn dikkers massasprints, en 't verschil is mêestol emakt in 'n tydrit. 
 
 == Recente winnoars ==
-*[[1995]] - [[Johan Museeuw]] {{BEL}}
-*[[1996]] - [[Philippe Gaumont]] {{FRA}}
-*[[1997]] - [[Johan Museeuw]] {{BEL}}
-*[[1998]] - Alexander Vinokoerov {{KAZ}}
-*[[1999]] - Michael Sandstød {{DEN}}
-*[[2000]] - Martin Rittsel {{SWE}}
-*[[2001]] - Didier Rous {{FRA}}
-*[[2002]] - Sylvain Chavanel {{FRA}}
-*[[2003]] - Christophe Moreau {{FRA}} 
-*[[2004]] - Sylvain Chavanel {{FRA}}
-*[[2005]] - Pierrick Fédrigo {{FRA}}
-*[[2006]] - Roberto Petito {{ITA}}
-*[[2007]] - Matthieu Ladagnous {{FRA}}
+*[[1995]] - [[Johan Museeuw]]  
+*[[1996]] - [[Philippe Gaumont]]  
+*[[1997]] - [[Johan Museeuw]]  
+*[[1998]] - Alexander Vinokoerov 
+*[[1999]] - Michael Sandstød  
+*[[2000]] - Martin Rittsel 
+*[[2001]] - Didier Rous 
+*[[2002]] - Sylvain Chavanel 
+*[[2003]] - Christophe Moreau  
+*[[2004]] - Sylvain Chavanel 
+*[[2005]] - Pierrick Fédrigo 
+*[[2006]] - Roberto Petito 
+*[[2007]] - Matthieu Ladagnous 
 
 == Externe koppelienge ==
 * [http://www.4joursdedunkerque.org/ Officieeln website]
