*Empty MediaWiki Message*

--- a/Vierdoagsche_van_Duunkerke.mw
+++ b/Vierdoagsche_van_Duunkerke.mw
@@ -1,6 +1,6 @@
 De '''Vierdoagsche van Duunkerke''' is e [[vélokoerse|koers]] die, sedert 1955, idder joar verreedn is in en round [[Duunkerke]].
 
-De koers is mêestol verreedn begun mei. De Vierdoagsche deurt, de latste joarn, eigentlik 5 doagn. D'r zyn dikkers massasprints, en 't verschil is mêestol emakt in 'n tydrit. 
+De koers is mêestol verreedn begun mei. De Vierdoagsche deurt, de latste joarn, eigentlik 5 of 6 doagn. D'r zyn dikkers massasprints, en 't verschil is mêestol emakt in 'n tydrit. 
 
 == Recente winnoars ==
 *[[1995]] - [[Johan Museeuw]]  
