--- a/Duunkerke.mw
+++ b/Duunkerke.mw
@@ -25,7 +25,7 @@ Duunkerke es't cultureel centrum vô [[Frans-Vloandern]] en wat dat er nog overs
 * [[Michiel de Swaen]] (1654-1707), schryver
 
 ==Sport==
-De Vierdoagse van Duunkerke is e belangryke [[vélokoerse|koers]] op de wielerkalender.
+De [[Vierdoagse van Duunkerke]] is e belangryke [[vélokoerse|koers]] op de wielerkalender.
 
 ==Externe koppelieng==
 *[http://www.dunkerque.fr Officiële website van de stad Duunkerke]
