--- a/Oud-Egyptische_kunste.mw
+++ b/Oud-Egyptische_kunste.mw
@@ -5,7 +5,7 @@ De '''Oud-Egyptisch kunste''' sloat up de cultuur in het antieke [[Egypte]].
 De geschiedenisse van et antieke Egypte bestoat uut drie periodes.
 *'t '''Oud Ryk''' (3000 - 2150 v.C.)
 ::Faroa Menes verenigt round 3000 v.C. de verschillige klene stoatjes lanks de Neyl tout één ryk en je makt Memfis tout oofdstee.
-::In die periode zyn de grote piramides gebouwd gewist.
+::In die periode  de grote piramides gebouwd gewist.
 *'t '''Middnryk''' (2040 - 1750 v.C.)
 ::D'oofdstee es nu Thebe.
 ::De farao's en de ryke bevolkienge loatn under nu begroavn in rotsgroavn in plekke van piramides (cfr. Tout-anch-Amon).
