--- a/Oud-Egyptische_kunste.mw
+++ b/Oud-Egyptische_kunste.mw
@@ -14,7 +14,7 @@ De geschiedenisse van et antieke Egypte bestoat uut drie periodes.
 
 Achter 't Nieuw Ryk verloorn de farao's undern macht. Me spreekn toun van de Loate Periode. 
 
-In 525 v.C. wos Egypte deur de Perzn veroverd. Round 300 v.C. kwom Egypte ounder 't gezag van Alexander den Grootn.
+In 525 v.C. wos Egypte deur de Perzn veroverd. Round 300 v.C. kwom Egypte ounder 't gezag van Alexander den.
 
 ==Veelgodery==
 [[Ofbeeldienge: Luxor, hieroglyphic decorations inside the Temple of Hatshepsut, Egypt, Oct 2004 A.jpg|right|thumb|Toemosis III offert an den god Horus (tempel van Hatsjepsoet, Thebe)]] 
