blad ersteld noa de versie van [[Gebruker:Patrick|Patrick]] deur de bydroage van [[Specioal:Contributions/81.242.96.229|81.242.96.229]] were weg te doen

--- a/Oud-Egyptische_kunste.mw
+++ b/Oud-Egyptische_kunste.mw
@@ -5,7 +5,7 @@ De '''Oud-Egyptisch kunste''' sloat up de cultuur in het antieke [[Egypte]].
 De geschiedenisse van et antieke Egypte bestoat uut drie periodes.
 *'t '''Oud Ryk''' (3000 - 2150 v.C.)
 ::Faroa Menes verenigt round 3000 v.C. de verschillige klene stoatjes lanks de Neyl tout één ryk en je makt Memfis tout oofdstee.
-::In die periode  de grote piramides gebouwd gewist.
+::In die periode zyn de grote piramides gebouwd gewist.
 *'t '''Middnryk''' (2040 - 1750 v.C.)
 ::D'oofdstee es nu Thebe.
 ::De farao's en de ryke bevolkienge loatn under nu begroavn in rotsgroavn in plekke van piramides (cfr. Tout-anch-Amon).
@@ -14,7 +14,7 @@ De geschiedenisse van et antieke Egypte bestoat uut drie periodes.
 
 Achter 't Nieuw Ryk verloorn de farao's undern macht. Me spreekn toun van de Loate Periode. 
 
-In 525 v.C. wos Egypte deur de Perzn veroverd. Round 300 v.C. kwom Egypte ounder 't gezag van Alexander den.
+In 525 v.C. wos Egypte deur de Perzn veroverd. Round 300 v.C. kwom Egypte ounder 't gezag van Alexander den Grootn.
 
 ==Veelgodery==
 [[Ofbeeldienge: Luxor, hieroglyphic decorations inside the Temple of Hatshepsut, Egypt, Oct 2004 A.jpg|right|thumb|Toemosis III offert an den god Horus (tempel van Hatsjepsoet, Thebe)]] 
