*Empty MediaWiki Message*

--- a/Casino_(Blanknberge).mw
+++ b/Casino_(Blanknberge).mw
@@ -1,4 +1,5 @@
-[[Ofbeeldienge:Blankenberge - Casino 1.jpg|thumb|<center>Casino Blanknberge]]
+[[Ofbeeldienge:Blankenberge - Casino 1.jpg|thumb|<center>Casino Blanknberge ip de zêedyk]]
+[[Ofbeeldienge:Casino kant stad.jpg|thumb|<center>Casino an de kant van de stad]]
 De '''Casino''' ip de zêedyk is ’t cultureel centrum van [[Blanknberge]]. ‘t Casinogebouw dateert van [[1934]] en is in [[1994]]-[[1995]] hêlegans gerenoveerd. 
 
 De stad Blanknberge et drie ''baby's'' van [[David Černý]] ([[Beaufort 2006]]) angekocht die nu ip de Casino kruupn, één ip ’t terras, den twiddn ip ’t dek, en den derdn kruupt ip de torre noa boovn.
