--- a/Vierdoagsche_van_Duunkerke.mw
+++ b/Vierdoagsche_van_Duunkerke.mw
@@ -1,6 +1,8 @@
 De '''Vierdoagsche van Duunkerke''' is e [[vélokoerse|koers]] die, sedert 1955, idder joar verreedn is in en round [[Duunkerke]].
 
-De koers is mêestol verreedn begun mei. De Vierdoagsche deurt, de latste joarn, eigentlik 5 of 6 doagn. D'r zyn dikkers massasprints, en 't verschil is mêestol emakt in 'n tydrit. 
+De koers is mêestol verreedn begun mei. D'r zyn dikkers massasprints, en 't verschil is mêestol emakt in 'n tydrit. Sedert da 'n tydrit bestoat (1963) deurt de Vierdoagsche 5 tout 6 doagn.
+
+Recorouder van de koers is [[Freddy Maertens]] (4 keirs ewonn).
 
 == Recente winnoars ==
 *[[1995]] - [[Johan Museeuw]]  
@@ -19,3 +21,14 @@ De koers is mêestol verreedn begun mei. De Vierdoagsche deurt, de latste joarn,
 
 == Externe koppelienge ==
 * [http://www.4joursdedunkerque.org/ Officieeln website]
+
+[[ca:Quatre dies de Dunkerque]]
+[[de:Vier Tage von Dünkirchen]]
+[[es:Cuatro días de Dunkerque]]
+[[fr:Quatre jours de Dunkerque]]
+[[lb:Quatre Jours de Dunkerque]]
+[[nl:Vierdaagse van Duinkerke]]
+[[ja:ダンケルク4日間レース]]
+[[no:Dunkirk 4-dagers]]
+[[pl:Cztery Dni Dunkierki]]
+[[fi:Dunkerquen neljän päivän ajo]]
