--- a/Casino_(Blanknberge).mw
+++ b/Casino_(Blanknberge).mw
@@ -20,3 +20,4 @@ Ip ‘t gelykvloers van de Casino ist er een kunstgalerye vo tentôonstellingn. 
 *[http://cultuur.blankenberge.be/cultureel-centrum/fotos-casino.aspx Foto’s Casino]
 
 [[Categorie: Blanknberge]]
+[[Categorie: Casino in West-Vloandern]]
