*Empty MediaWiki Message*

--- a/Vierdoagsche_van_Duunkerke.mw
+++ b/Vierdoagsche_van_Duunkerke.mw
@@ -22,6 +22,9 @@ Recorouder van de koers is [[Freddy Maertens]] (4 keirs ewonn).
 == Externe koppelienge ==
 * [http://www.4joursdedunkerque.org/ Officieeln website]
 
+[[Categorie:Fransche wielerkoers]]
+[[Categorie:Duunkerke]]
+
 [[ca:Quatre dies de Dunkerque]]
 [[de:Vier Tage von Dünkirchen]]
 [[es:Cuatro días de Dunkerque]]
