--- a/Sint-Donaaskathedroale.mw
+++ b/Sint-Donaaskathedroale.mw
@@ -22,5 +22,7 @@ In 1834 wierdn de relikwien van Donatianus overgebrocht noa de [[Sint-Salvatorsk
 De Sint-Donaaskerke et ‘n importente rolle gespeeld in Brugge en d’r zyn veel belangryke  persoonn begroavn o.a.: Karel den Goein (1127), [[Lodewyk II van Nevers]] (1346), Jan van Eyck (1441),  kanunnik Joris van der Paele (1443), [[Juan Luis Vives]] (1540) en verzekers ôok [[Karel den Stoutn]] (1477). Z’n proalgraf is nu te bezichtign in de [[Onze-Lieve-Vrouwekerke (Brugge)|Onze-Lieve-Vrouwekerke]].
 
 [[Categorie:Brugge]]
+[[Categorie:Kathedroale]]
+[[Categorie:Keirke in West-Vloandern]]
 
 [[nl:Sint-Donaaskathedraal (Brugge)]]
