--- a/Zeeki.mw
+++ b/Zeeki.mw
@@ -9,3 +9,5 @@ DJ Tom, The Ancient Ones, Steak N°8, After Midnight, Black Chili, Het Zesde Met
 == Externe koppeliengn ==
 * [http://www.zeeki.be Den officieeln site]
 * [http://www.trotsewestvlamingen.tk Trotse West-Vlamingen]
+
+[[Categorie: West-Vlamsch muziekfestival]]
