--- a/Burg_(Brugge).mw
+++ b/Burg_(Brugge).mw
@@ -48,3 +48,4 @@ D’r stoan nu bordn die erinnern an de môord ip groaf [[Karel den Goein]] in d
 in 1127.
 
 [[Categorie: Brugge]]
+[[Categorie: Pling]]
