--- a/Vliegpling_van_Frankfurt.mw
+++ b/Vliegpling_van_Frankfurt.mw
@@ -11,7 +11,8 @@ Ofbeeldienge:Flughafen Frankfurt am Main.JPG|Vlieger ip de startboane
 
 {{Commons|Flughafen Frankfurt am Main}}
 
-[[Categorie:vliegpling]]
+[[Categorie: Vliegpling in Duutsland]]
+[[Categorie: Frankfurt am Main]]
 
 
 [[af:Lughawe Frankfurt]]
