--- a/Burg_(Brugge).mw
+++ b/Burg_(Brugge).mw
@@ -8,7 +8,7 @@ Je zound [[Boudewyn I van Vloandern|Boudewyn met den Yzern Oarm]] noa de Vloande
 Uut de Vloanderngouwe groeide ‘t [[Groafschap Vloandern]], woavan da Boudewyn I den eestn groaf was.
 
 De Vikings droungn met under snekkn mè drakarkoppn zô verre meugelik ’t land binn.
-Ze kostn met under bootn langs de zeeoarm ’t [[Zwin]] en de riviere de Reie, (woa dat de noame van de reitjes van komt) tout in Brugge voarn, wa dat in dien tyd (vó de [[Duunkerke III#Stormvloed van 1134|stormvloed van 1134]]) ollene meugelik was met ôog woater. Ze noemdn die platse ''Bryghia'', wat dat Oud-Noors es vo ''anlegplatse''. Vô de Vikings teegn t'oudn liet Boudewyn met den Yzern Oarm round 864 ‘n versterkte burcht bouwn ip de plekke woa da nu de Burg is.  
+Ze kostn met under bootn langs de zeeoarm ’t [[Zwin]] en de riviere de Reie, (woa dat de noame van de reitjes van komt) tout in Brugge voarn, wa dat in dien tyd (vó de [[Duunkerke III#Stormvloed van 1134|stormvloed van 1134]]) ollene meugelik was met ôog woater. Ze noemdn die platse ''Bryghia'', wat dat Oudnoors es vo ''anlegplatse''. Vô de Vikings teegn t'oudn liet Boudewyn met den Yzern Oarm round 864 ‘n versterkte burcht bouwn ip de plekke woa da nu de Burg is.  
 
 Brugge groeide round de burcht van de groavn van Vloandern. ’t Was in dien tyd groafelik gebied (nie stedelik) en dus under privébezit.
 
