/* Palmares (allêne de echte oogtepuntn) */

--- a/Johan_Museeuw.mw
+++ b/Johan_Museeuw.mw
@@ -24,7 +24,7 @@ Johan Museeuw eit elf kêren een Weireldbekerwedstryd gewounn (een absoluut reco
 * 2002 - Paris-Roubaix (WB10)
 * 2002 - HEW Cyclassics Hamburg (WB11)
 
-Een aantal andere oogtepuntn: [[E3 Prys Vloandern]], poar kêers [[Belgisch Kampioenschap Koers|Belgisch kampioen]], [[Twis deur Vloandern]], [[Kuurne-Brussel-Kuurne]], Brabantse Pyl, Omloop 't Volk, etappn en eindklassementen in de Rounde van Zwitserland, Denemarken, Ruta del Sol, [[Duunkerke]], [[Driedoagse van De Panne]]...
+Een aantal andere oogtepuntn: [[E3 Prys Vloandern]], poar kêers [[Belgisch Kampioenschap Koers|Belgisch kampioen]], [[Twis deur Vloandern]], [[Kuurne-Brussel-Kuurne]], Brabantse Pyl, Omloop 't Volk, etappn en eindklassementen in de Rounde van Zwitserland, Denemarken, Ruta del Sol, [[Vierdoagsche van Duunkerke]], [[Driedoagse van De Panne]]...
 
 == Ende in mineur ==
 Op 2 mei 2004 stoptige Museeuw mè koersen. Aloewel de carrière van Museeuw moeilik overschat kan weirden (zie palmares), is ze jammer genoeg ip een negatieve maniere geëndigd. Hij werd verdacht van [[Dopienge|dopinggebruuk]] en de termen 'wesp' (codewoord voe Aranesp) en 'gesneden brôod' (groeihormoon) zyn sedertdien legendoarisch. 
