*Empty MediaWiki Message*

--- a/Burg_(Brugge).mw
+++ b/Burg_(Brugge).mw
@@ -1,5 +1,6 @@
 [[Image:Brugge - Waterhalle 1294 - 1787.jpg|thumb|right|300px|De Burg an de riviere de Reie mè links de [[Sint-Donaaskathedroale]]]] 
-De '''Burg''' is ‘t pling woa dat de geschiedenisse van Brugge begost is. De riviere de Reie strôomde deur Brugge en is nu hêlegans gekanaliseerd.
+De '''Burg''' is ‘t pling woa dat de geschiedenisse van [[Brugge]] begost is. De riviere de Reie strôomde deur Brugge en is nu hêlegans gekanaliseerd.
+
 ==Geschiedenisse==
 [[843]] was ’n importent joar vor Europa. Deur ‘t [[Verdrag van Verdun]] wierd ’t Ryk van [[Karel den Grôotn]] verdêeld ounder z’n drie klêenkinders. [[Karel den Kletsn]] krêeg  [[West-Francië]] (à peu près [[Frankryk]] en [[Vloandern]]).
 
