--- a/Carolus_Linnaeus.mw
+++ b/Carolus_Linnaeus.mw
@@ -1,7 +1,7 @@
 [[Ofbeeldienge:Carolus Linnaeus.jpg|thumb|<center>Carolus Linnaeus]]
 '''Carolus Linnaeus''' (in 't Zweeds '''Carl von Linné''') (° [[Råshult]] by [[Stenbrohult]], [[23 meie]] [[1707]] - [[Uppsala]], [[10 januoari]] [[1778]]) was ne [[Zweedn|Zweedsen]] wetenschapper, meest bekend als bioloog, die de binomiale nomenclateure voor levende wezens invoerde. 
 
-In 1999 wier ter meerdere ere van Linnaeus de [[Internationale Biologie Olympiade]], kortweg [[IBO]] genaamd ingericht in [[Uppsala]], ounder leidinge van de twidden bekenden bioloog uut Uppsala, [[Andreas Ehn]], specialist in de [[arachnologie]]. 
+In 1999 wier ter meerdere ere van Linnaeus de [[Internationale Biologie Olympiade]], kortweg [[IBO]] genaamd ingericht in Uppsala, ounder leidinge van de twidden bekenden bioloog uut Uppsala, [[Andreas Ehn]], specialist in de [[arachnologie]]. 
 
 In 2007 was 't 300 jaar geleen dat em geboorn wier, en wiern d'r verschillende tentoonstellingn en erdenkingn gorganiseerd, ounder meer in [[Harderwyk]], [[Haarlem]], [[Leiden]] en [[Amsterdam]].
 
