--- a/Rounde_van_Vloandern.mw
+++ b/Rounde_van_Vloandern.mw
@@ -2,16 +2,16 @@ De '''Rounde van Vloandern''' is de belangrykste [[koerse]] van [[Vloandern]]. D
 
 == Recente winnoars  ==
 *1997	[[Rolf Sørensen]] (Den)
-*1998	[[Johan Museeuw]] (Bel)
-*1999	[[Peter Van Petegem]] (Bel)
-*2000	[[Andrei Tchmil]] (Bel)
-*2001	[[Gianluca Bortolami]] (Ita)
-*2002	[[Andrea Tafi]] (Ita)
-*2003	[[Peter Van Petegem]] (Bel)
+*1998	[[Johan Museeuw]] [[Ofbeeldienge:Flag of Belgium.svg|20px]]
+*1999	[[Peter Van Petegem]] [[Ofbeeldienge:Flag of Belgium.svg|20px]]
+*2000	[[Andrei Tchmil]] ([[Ofbeeldienge:Flag of Belgium.svg|20px]]
+*2001	[[Gianluca Bortolami]] [[Ofbeeldienge:Flag of Italy.svg|20px]]
+*2002	[[Andrea Tafi]] [[Ofbeeldienge:Flag of Italy.svg|20px]]
+*2003	[[Peter Van Petegem]] [[Ofbeeldienge:Flag of Belgium.svg|20px]]
 *2004	[[Steffen Wesemann]] (Dui)
-*2005	[[Tom Boonen]] (Bel)
-*2006	[[Tom Boonen]] (Bel)
-*2007	[[Alessandro Ballan]] (Ita)
+*2005	[[Tom Boonen]] [[Ofbeeldienge:Flag of Belgium.svg|20px]]
+*2006	[[Tom Boonen]] [[Ofbeeldienge:Flag of Belgium.svg|20px]]
+*2007	[[Alessandro Ballan]] [[Ofbeeldienge:Flag of Italy.svg|20px]]
 
 ==Beklimmiengn uut de Rounde van Vloandern==
 {| width=65%
