--- a/Rounde_van_Vloandern.mw
+++ b/Rounde_van_Vloandern.mw
@@ -1,14 +1,14 @@
 De '''Rounde van Vloandern''' is de belangrykste [[koerse]] van [[Vloandern]]. De Rounde makt dêel uut van de [[Pro Tour]] en is êen va de 10 belangrykste eendagskoersen. De latste joaren begunt ze in [[Brugge]] en goat ze via e poar [[West-Vloandern|West-Vlamsche]] steedn noar [[Ôost-Vloandern]]. 't Moe wel gezei zyn dat de mêest interessante stikkn in Ôost-Vloandern liggn, in d'euvelstreke van de Zwalm.
 
 == Recente winnoars  ==
-*1997	[[Rolf Sørensen]] (Den)
+*1997	[[Rolf Sørensen]] [[Ofbeeldienge:Flag of Denmark.svg|20px]]
 *1998	[[Johan Museeuw]] [[Ofbeeldienge:Flag of Belgium.svg|20px]]
 *1999	[[Peter Van Petegem]] [[Ofbeeldienge:Flag of Belgium.svg|20px]]
-*2000	[[Andrei Tchmil]] ([[Ofbeeldienge:Flag of Belgium.svg|20px]]
+*2000	[[Andrei Tchmil]] [[Ofbeeldienge:Flag of Belgium.svg|20px]]
 *2001	[[Gianluca Bortolami]] [[Ofbeeldienge:Flag of Italy.svg|20px]]
 *2002	[[Andrea Tafi]] [[Ofbeeldienge:Flag of Italy.svg|20px]]
 *2003	[[Peter Van Petegem]] [[Ofbeeldienge:Flag of Belgium.svg|20px]]
-*2004	[[Steffen Wesemann]] (Dui)
+*2004	[[Steffen Wesemann]] [[Ofbeeldienge:Flag of Germany.svg|20px]]
 *2005	[[Tom Boonen]] [[Ofbeeldienge:Flag of Belgium.svg|20px]]
 *2006	[[Tom Boonen]] [[Ofbeeldienge:Flag of Belgium.svg|20px]]
 *2007	[[Alessandro Ballan]] [[Ofbeeldienge:Flag of Italy.svg|20px]]
