--- a/Gent-Wevelgem.mw
+++ b/Gent-Wevelgem.mw
@@ -5,17 +5,17 @@ Gent-Wevelgem makt sins 2006 deel ut van de zogenoamde '[[Pro-Tour]]', een soame
 Sommigte [[West-Vloandern|West-Vloamingn]] ein de koers ol gewonn: [[Nico Mattan]], [[Freddy Maertens]], [[Briek Schotte]],...
 
 == Recente winnoars ==
-* 2007  [[Marcus Burghardt]] (Dui)
+* 2007  [[Marcus Burghardt]] [[Ofbeeldienge:Flag of Germany.svg|20px]]
 * 2006  [[Thor Hushovd]] (Noo)
-* 2005 	[[Nico Mattan]] (Bel)
-* 2004 	[[Tom Boonen]](Bel)
-* 2003 	[[Andreas Klier]] (Dui)
-* 2002 	[[Mario Cipollini]](Ita)
+* 2005 	[[Nico Mattan]] [[Ofbeeldienge:Flag of Belgium.svg|20px]]
+* 2004 	[[Tom Boonen]] [[Ofbeeldienge:Flag of Belgium.svg|20px]]
+* 2003 	[[Andreas Klier]] [[Ofbeeldienge:Flag of Germany.svg|20px]]
+* 2002 	[[Mario Cipollini]] [[Ofbeeldienge:Flag of Italy.svg|20px]]
 * 2001 	[[George Hincapie]] (USA)
-* 2000 	[[Geert van Bondt]] (Bel)
-* 1999 	[[Tom Steels]] (Bel)
-* 1998 	[[Frank Vandenbroucke (coureur)|Frank Vandenbroucke]] (Bel)
-* 1997 	[[Philippe Gaumont]] (Fra)
+* 2000 	[[Geert van Bondt]] [[Ofbeeldienge:Flag of Belgium.svg|20px]]
+* 1999 	[[Tom Steels]] [[Ofbeeldienge:Flag of Belgium.svg|20px]]
+* 1998 	[[Frank Vandenbroucke (coureur)|Frank Vandenbroucke]] [[Ofbeeldienge:Flag of Belgium.svg|20px]]
+* 1997 	[[Philippe Gaumont]] [[Ofbeeldienge:Flag of France.svg|20px]]
 
 == Externe koppelieng ==
 *[http://www.gent-wevelgem.be/ Officieeln website van de koerse]
