*Empty MediaWiki Message*

--- a/Serpentoarium.mw
+++ b/Serpentoarium.mw
@@ -1,17 +1,19 @@
-Een '''serpentoarium''' is een [[zoo]] vo [[reptiel]]n en [[amfibie]]n woa dan ze [[puut|puutn]], [[kobbe|kobbn]], [[krokodile|krokodiln]], [[slange|slangn]], [[schildpadde|schildpaddn]], [[schorpioen]]n en [[aketisse|aketissn]] oudn. In een serpentoarium moetn ze de temperateure en de vochtigeidsgroad constant in d'oge oudn, want vo die bêestn is da van grôot belang. Reptieln wordn g'oudn in een [[terrarium]]. 
+[[Ofbeeldienge:Serpentarium.jpg|thumb|<center>Serpentarium ip de zêedyk in Blanknberge]]
+Een '''serpentoarium''' is een zoo vo [[reptiel]]n. In een serpentoarium moetn ze de temperateure en de vochtigeidsgroad constant in d'oge oudn, want vo die bêestn is da van grôot belang. Reptieln wordn g'oudn in een terrarium. 
 
-In [[Blanknberge]] è je een belangryk serpentoarium. Je kunt d'r een reize moakn deur 't oerwoud en de woestyne. 't Decor bestoat uut rotsstructeurn, woatervalln en plantn woadeure dat 't interieur een weergoave is van 't nateurlik biotoop van de verschillige sôortn bêestn.
+In [[Blanknberge]] è je een belangryk serpentarium. Je kunt d'r een reize moakn deur de jungle en de woestyne. 't Decor bestoat uut rotsstructeurn, woatervalln en plantn woadeure dat 't interieur een weergoave is van 't nateurlik biotoop van de verschillige sôortn bêestn, lik [[slange|slangn]], [[leguoan|leguoann]], [[oagedisse|oagedissn]], [[krokodile|krokodiln]], [[puut|puutn]], [[kobbe|kobbn]], [[schorpioen]]n en nog vele mêer. D’r is ook een druupstêengrot me [[vlêermuus|vlêermuzen]] en blende grotvissen.
 <gallery>
-Ofbeeldienge: Anaconda jaune 34.JPG|<center>Slange
-Ofbeeldienge: Podarcis muralis01.jpg|<center>Aketisse
+Ofbeeldienge: Anaconda jaune 34.JPG|<center>Boa
 Ofbeeldienge: Iguana iguana 1 AB.jpg|<center>Leguoan
-Ofbeeldienge: Brachypelma edit.jpg|<center>Kobbe
+Ofbeeldienge: Brachypelma edit.jpg|<center>Tarantula
 </gallery>
 
 == Externe koppelienge ==
 *[http://www.serpentarium.be Serpentoarium Blankenberge]
 
 [[Categorie:Blanknberge]]
+[[Categorie:Reptiel]]
+[[Categorie:Zoo]]
 
 [[en:Serpentarium]]
 [[nl:Serpentarium]]
