--- a/Zoo_van_Antwerpn.mw
+++ b/Zoo_van_Antwerpn.mw
@@ -12,4 +12,5 @@ De '''Zoo van Antwerpn''' (kortweg: de Zoo) is êen van d'oudste dierntuunn va h
 *[http://www.zooantwerpen.be Officieeln website]
 
 [[Categorie:Plekke in Antwerpn]]
+[[Categorie:Zoo]]
 {{Streektoale|Poperiengs}}
