--- a/Blink-182.mw
+++ b/Blink-182.mw
@@ -19,7 +19,7 @@ Intusschn i Angels And Airwaves al 2 albums uutgebrocht, en Plus Forty Four êen
 ==Discografie==
 
 * Flyswatter (demo, 1992)
-* Buddha (album, 1995)
+* Buddha (demo, 1993)
 * Cheshire Cat (album, 1994)
 * Dude Ranch (album, 1997)
 * Enema of the State (album, 1999)
