*Empty MediaWiki Message*

--- a/Tom_DeLonge.mw
+++ b/Tom_DeLonge.mw
@@ -1,3 +1,21 @@
 {{wiu}}
 '''Tom Delonge''' is den gitarist gewist van [[Blink 182]].
 In 2005 istem derutgestapt en istem begonnen me "[[Angels and Airwaves]]"
+
+[[cs:Tom DeLonge]]
+[[da:Tom DeLonge]]
+[[de:Tom DeLonge]]
+[[en:Tom DeLonge]]
+[[et:Tom DeLonge]]
+[[es:Tom DeLonge]]
+[[fr:Tom Delonge]]
+[[id:Tom DeLonge]]
+[[it:Tom DeLonge]]
+[[he:טום דה-לונג']]
+[[nl:Tom DeLonge]]
+[[no:Tom DeLonge]]
+[[pl:Tom DeLonge]]
+[[pt:Tom DeLonge]]
+[[sk:Tom DeLonge]]
+[[fi:Tom DeLonge]]
+[[sv:Tom DeLonge]]
