*Empty MediaWiki Message*

--- a/Mark_Hoppus.mw
+++ b/Mark_Hoppus.mw
@@ -12,3 +12,21 @@ Et eeft to nu toe al en albume utgebroacht noamelik
 
 [[Categorie:Amerikoansn muzikant]]
 [[Categorie:Blink 182]]
+
+[[de:Mark Hoppus]]
+[[en:Mark Hoppus]]
+[[es:Mark Hoppus]]
+[[fr:Mark Hoppus]]
+[[ko:마크 호퍼스]]
+[[id:Mark Hoppus]]
+[[it:Mark Hoppus]]
+[[he:מארק הופוס]]
+[[lt:Mark Hoppus]]
+[[hu:Mark Hoppus]]
+[[nl:Mark Hoppus]]
+[[no:Mark Hoppus]]
+[[pl:Mark Hoppus]]
+[[pt:Mark Hoppus]]
+[[simple:Mark Hoppus]]
+[[fi:Mark Hoppus]]
+[[sv:Mark Hoppus]]
