*Empty MediaWiki Message*

--- a/Travis_Barker.mw
+++ b/Travis_Barker.mw
@@ -1,3 +1,20 @@
 {{wiu}}
 '''Travis Barker''' is ne vree bekenden drummer.Ij speelde wok in'''[[ Blink 182]]''' an de drums.
 Loater eeftij Mark gevolgd en gejoined in [[+44]]
+
+[[cs:Travis Barker]]
+[[da:Travis Barker]]
+[[de:Travis Barker]]
+[[en:Travis Barker]]
+[[et:Travis Barker]]
+[[es:Travis Barker]]
+[[fr:Travis Barker]]
+[[id:Travis Barker]]
+[[it:Travis Barker]]
+[[he:טראוויס בארקר]]
+[[nl:Travis Barker]]
+[[no:Travis Barker]]
+[[pl:Travis Barker]]
+[[pt:Travis Barker]]
+[[fi:Travis Barker]]
+[[sv:Travis Barker]]
