*Empty MediaWiki Message*

--- a/Travis_Barker.mw
+++ b/Travis_Barker.mw
@@ -2,6 +2,8 @@
 '''Travis Barker''' is ne vree bekenden drummer.Ij speelde wok in'''[[ Blink 182]]''' an de drums.
 Loater eeftij Mark gevolgd en gejoined in [[+44]]
 
+[[Categorie:Blink 182]]
+
 [[cs:Travis Barker]]
 [[da:Travis Barker]]
 [[de:Travis Barker]]
