*Empty MediaWiki Message*

--- a/Tom_DeLonge.mw
+++ b/Tom_DeLonge.mw
@@ -2,6 +2,8 @@
 '''Tom Delonge''' is den gitarist gewist van [[Blink 182]].
 In 2005 istem derutgestapt en istem begonnen me "[[Angels and Airwaves]]"
 
+[[Categorie:Blink 182]]
+
 [[cs:Tom DeLonge]]
 [[da:Tom DeLonge]]
 [[de:Tom DeLonge]]
