*Empty MediaWiki Message*

--- a/Blink-182.mw
+++ b/Blink-182.mw
@@ -28,6 +28,7 @@ Intusschn i Angels And Airwaves al 2 albums uutgebrocht, en Plus Forty Four êen
 * Blink-182 (gin titel, album, 2003)
 * Greatest Hits (verzoamelalbum, 2005)
 
+[[Categorie: Blink 182]]
 [[Categorie:Groep uut de Verênigde Stoatn]]
 [[Categorie:Punk]]
 
